--- a/rabbitmq.config
+++ b/rabbitmq.config
@@ -6,8 +6,8 @@
 		{ loopback_users, [ ] },
 		{ tcp_listeners, [ 5672 ] },
 		{ ssl_listeners, [ ] },
-		{ default_pass, <<"password">> },
-		{ default_user, <<"admin">> },
+		{ default_pass, "admin" },
+		{ default_user, "admin" },
 		{ hipe_compile, false }
 	] },
 
