--- a/docker-compose-swarm.yml
+++ b/docker-compose-swarm.yml
@@ -17,6 +17,9 @@ services:
       - "15672:15672"
       - "25672:25672"
 
+    networks:
+      - rabbitmq-cluster
+
   rabbit2:
     image: rabbitmq:3-management
     hostname: rabbit2
@@ -28,6 +31,9 @@ services:
     volumes:
       - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
       - "./definitions.json:/etc/rabbitmq/definitions.json"
+
+    networks:
+      - rabbitmq-cluster
     
   rabbit3:
     image: rabbitmq:3-management
@@ -40,8 +46,15 @@ services:
     volumes:
       - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
       - "./definitions.json:/etc/rabbitmq/definitions.json"
+      
+    networks:
+      - rabbitmq-cluster
 
 networks:
-  default:
-    external:
-      name: rabbitmq-cluster
+  rabbitmq-cluster:
+    driver: overlay
+
+# networks:
+#   default:
+#     external:
+#       name: rabbitmq-cluster
