--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     environment:
       RABBITMQ_ERLANG_COOKIE: "secret string"
       RABBITMQ_NODENAME: rabbit1
-    volumes:
-      - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
-      - "./definitions.json:/etc/rabbitmq/definitions.json"
+    # volumes:
+    #   - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
+    #   - "./definitions.json:/etc/rabbitmq/definitions.json"
     ports:
       - "4369:4369"
       - "5671:5671"
@@ -16,6 +16,12 @@ services:
       - "15671:15671"
       - "15672:15672"
       - "25672:25672"
+
+    configs:
+      - source: rabbitmq_config
+        target: /etc/rabbitmq/rabbitmq.config
+      - source: definitons_json
+        target: /etc/rabbitmq/definitions.json
 
   rabbit2:
     image: rabbitmq:3-management
@@ -25,9 +31,14 @@ services:
     environment:
       RABBITMQ_ERLANG_COOKIE: "secret string"
       RABBITMQ_NODENAME: rabbit2
-    volumes:
-      - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
-      - "./definitions.json:/etc/rabbitmq/definitions.json"
+    # volumes:
+    #   - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
+    #   - "./definitions.json:/etc/rabbitmq/definitions.json"
+    configs:
+      - source: rabbitmq_config
+        target: /etc/rabbitmq/rabbitmq.config
+      - source: definitons_json
+        target: /etc/rabbitmq/definitions.json
     
   rabbit3:
     image: rabbitmq:3-management
@@ -37,9 +48,20 @@ services:
     environment:
       RABBITMQ_ERLANG_COOKIE: "secret string"
       RABBITMQ_NODENAME: rabbit3
-    volumes:
-      - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
-      - "./definitions.json:/etc/rabbitmq/definitions.json"
+    # volumes:
+    #   - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
+    #   - "./definitions.json:/etc/rabbitmq/definitions.json"
+    configs:
+      - source: rabbitmq_config
+        target: /etc/rabbitmq/rabbitmq.config
+      - source: definitons_json
+        target: /etc/rabbitmq/definitions.json
+
+configs:
+  rabbitmq_config:
+    file: ./rabbitmq.config
+  definitons_json:
+    file: ./definitions.json
 
 networks:
   default:
