--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     environment:
       RABBITMQ_ERLANG_COOKIE: "secret string"
       RABBITMQ_NODENAME: rabbit1
-    # volumes:
-    #   - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
-    #   - "./definitions.json:/etc/rabbitmq/definitions.json"
+    
     ports:
       - "4369:4369"
       - "5671:5671"
@@ -23,6 +21,9 @@ services:
       - source: definitons_json
         target: /etc/rabbitmq/definitions.json
 
+    networks:
+      - rabbitmq-cluster
+
   rabbit2:
     image: rabbitmq:3-management
     hostname: rabbit2
@@ -31,14 +32,15 @@ services:
     environment:
       RABBITMQ_ERLANG_COOKIE: "secret string"
       RABBITMQ_NODENAME: rabbit2
-    # volumes:
-    #   - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
-    #   - "./definitions.json:/etc/rabbitmq/definitions.json"
+    
     configs:
       - source: rabbitmq_config
         target: /etc/rabbitmq/rabbitmq.config
       - source: definitons_json
         target: /etc/rabbitmq/definitions.json
+
+    networks:
+      - rabbitmq-cluster
     
   rabbit3:
     image: rabbitmq:3-management
@@ -48,14 +50,15 @@ services:
     environment:
       RABBITMQ_ERLANG_COOKIE: "secret string"
       RABBITMQ_NODENAME: rabbit3
-    # volumes:
-    #   - "./rabbitmq.config:/etc/rabbitmq/rabbitmq.config"
-    #   - "./definitions.json:/etc/rabbitmq/definitions.json"
+    
     configs:
       - source: rabbitmq_config
         target: /etc/rabbitmq/rabbitmq.config
       - source: definitons_json
         target: /etc/rabbitmq/definitions.json
+
+    networks:
+      - rabbitmq-cluster
 
 configs:
   rabbitmq_config:
@@ -66,6 +69,3 @@ configs:
 networks:
   rabbitmq-cluster:
     driver: overlay
-  default:
-    external:
-      name: rabbitmq-cluster
